--- a/cast_bootstrap5/static/cast_bootstrap5/scss/_components.scss
+++ b/cast_bootstrap5/static/cast_bootstrap5/scss/_components.scss
@@ -755,7 +755,7 @@ video {
 
 .comment-date {
   font-size: var(--cast-font-size-sm);
-  color: var(--cast-text-light);
+  color: var(--cast-text-muted);
 }
 
 .comment-reply {
